# AIFRED

./: .gitignore  AIFR3D_Halo_System_Build_Spec.docx  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  aifred_ecosystem_master_prompt.txt  aifred_ecosystem_master_prompt_summary.txt  aifred_revised_rebuild_prompt_v2.md  aifred_state.md  aifred_vst_canonical_build_document.txt  aifred_vst_companion_math_mapping_spec.md  codexprogress.txt  export_manifest.json  wrangler.jsonc
.github/workflows/: build.yml
android_admin/: AIFRED_ADMIN_APP_USE_GUIDE.md  gradle.properties  settings.gradle.kts
android_admin/app/: build.gradle.kts
android_admin/app/src/main/: AndroidManifest.xml
android_admin/app/src/main/java/com/aifred/admin/: MainActivity.kt
android_admin/app/src/main/res/values/: strings.xml
apps/website/: index.html  styles.css
docs/: AIFRED_WINDOWS_RELEASE_ARCHITECTURE.md  BACKEND-ROUTING-MACOS.md  FORENSIC_AUDIT_2026-04-18.md  HANDOFF.md  PLUGIN-STABILIZATION.md  REFERENCE_PROFILE_SYNC_FOUNDATION.md  RELEASE_NOTES.md
docs/wiki/: Admin-App-Guide.md  Backend-Map.md  Developer-Guide.md  Function-Map.md  Home.md  PayPal-Cloudflare-R2-Setup-Guide.md  Security-And-Distribution.md  Troubleshooting.md  User-Guide.md
models/aifred/: Modelfile
ops/support/: inquiries.json
plugin-aifred/: CMakeLists.txt
plugin-aifred/Source/: AifredEngineClient.cpp  AifredEngineClient.h  AifredLookAndFeel.cpp  AifredLookAndFeel.h  AnalysisEngine.cpp  AnalysisEngine.h  DiagnosticInterpreter.cpp  DiagnosticInterpreter.h  HaloState.cpp  HaloState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tools/: check-aifred-analysis-regressions.ps1  check-no-hardcoded-paths.ps1  check_integrity.py  ollama-auth-proxy.mjs  package-aifred.ps1  serve-website.mjs
tools/AifredEngine/: AifredEngine.Mac.csproj  AifredEngine.csproj  Program.cs
tools/AifredWindowsInstaller/: AifredWindowsInstaller.csproj  Program.cs  app.manifest
tools/AifredWindowsUninstaller/: AifredWindowsUninstaller.csproj  Program.cs  app.manifest
tools/linux/: setup-aifred-local-ai.sh
tools/macos/: com.aifred.engine.plist  package-aifred-macos.sh  postinstall  setup-aifred-local-ai.sh
tools/windows/: setup-aifred-local-ai.ps1
website/: .assetsignore  .dev.vars.example  _headers  _worker.js  app.js  config.js  index.html  package-lock.json  styles.css  wrangler.toml
website/assets/data/: analysis_metric_catalog.json  beat_catalog.json
website/assets/docs/: aifred-beta-release-notes.txt  aifred-installation.txt  aifred-release-notes.txt  aifred-system-requirements.txt  aifred-vst-user-guide.txt
website/functions/api/: [[path]].js
website/functions/api/v1/: [[path]].js
website/functions/ws/: chat.js
